--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1316,4 +1316,9 @@ body {
 	visibility: hidden;
 }
 
-
+img.no-style {
+	border: none  !important;
+	background: none  !important;
+	margin: 0  !important;
+	box-shadow: none  !important;
+}
